# cg-final

./: .gitignore  CMakeLists.txt  README.md
docs/: Encoding_Problem_Solutions.md  Geometry_Explain.md  Git_Guide.md  Install.md  PR_WorkFlow.md  debug_record.md
src/Buildings/include/: geometry.h  headers.h  house.h  platform.h  scene.h  texture.h  weather.h
src/Buildings/src/: geometry.cpp  house.cpp  main.cpp  platform.cpp  scene.cpp  texture.cpp  weather.cpp
src/Common/: Shader.h  headers.h
src/Core/: Cuboid.h  Mesh.h  Sprehe.h  Tetrahedron.h  Vertex.h  geometry.h  weather.cpp  weather.h
src/Model/House/: house.cpp
test/: enviroment.cpp  imgui.ini
tools/: gbk_to_uft8.py
